--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div class="itemLeft item1"></div>
-    <div class="itemLeft item2"></div>
-    <div class="itemLeft item3"></div>
-    <div class="itemLeft item4"></div>
-    <div class="itemLeft item5"></div>
-    <div class="itemLeft item6"></div>
-    <div class="itemLeft item7"></div>
-    <div class="itemLeft item8"></div>
-  </div>
+ <div class="wrapper">
+  <div class="itemLeft item1" style="background-image: url('https://statics.myclickfunnels.com/workspace/vZraBn/image/9262289/file/caa61b2c4bb76f9c082d9c03237b2ff7.png'); background-size: cover; background-position: center;"></div>
+  <div class="itemLeft item2"></div>
+  <div class="itemLeft item3"></div>
+  <div class="itemLeft item4"></div>
+  <div class="itemLeft item5"></div>
+  <div class="itemLeft item6"></div>
+  <div class="itemLeft item7"></div>
+  <div class="itemLeft item8"></div>
+</div>
   <div class="wrapper">
     <div class="itemRight item1"></div>
     <div class="itemRight item2"></div>
