--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <div class="wrapper">
-  <div class="itemLeft item1" style="background-image: url('https://statics.myclickfunnels.com/workspace/vZraBn/image/9262289/file/caa61b2c4bb76f9c082d9c03237b2ff7.png'); background-size: cover; background-position: center;"></div>
+  <div class="itemLeft item1"></div>
   <div class="itemLeft item2"></div>
   <div class="itemLeft item3"></div>
   <div class="itemLeft item4"></div>
