--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- partial:index.partial.html -->
     <div class="wrapper">
       <div class="itemLeft item1"></div>
       <div class="itemLeft item2"></div>
@@ -27,6 +26,11 @@
       <div class="itemRight item7"></div>
       <div class="itemRight item8"></div>
     </div>
-    <!-- partial -->
+    <div class="wrapper">
+      <div class="itemLeft item9"></div>
+      <div class="itemLeft item10"></div>
+      <div class="itemLeft item11"></div>
+      <div class="itemLeft item12"></div>
+    </div>
   </body>
 </html>
