--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <div class="itemLeft item10"></div>
       <div class="itemLeft item11"></div>
       <div class="itemLeft item12"></div>
+      <div class="itemLeft item13"></div>
+      <div class="itemLeft item14"></div>
+      <div class="itemLeft item15"></div>
+      <div class="itemLeft item16"></div>
     </div>
   </body>
 </html>
-
